# cbc-cpp

./: .gitignore  CMakeLists.txt  ChangeLog  ChangeLog.md  README.md  build.sh  package-lock.json  package.json  todo.txt
doc/: cbc及抽象语法树解析.md  cbc语义分析1.md  cbc语义分析2.md  类型系统.md
src/: CMakeLists.txt
src/ast/: ast.cpp  ast.hpp  cflat_token.cpp  cflat_token.hpp  declarations.cpp  declarations.hpp  dumpable.cpp  dumpable.h  dumper.cpp  dumper.h  import_file_node.cpp  import_file_node.h  location.cpp  location.hpp  node.hpp  slot.cpp  slot.hpp
src/compiler/: ast_visitor.h  compiler.cpp  compiler.h  compiler_mode.cpp  compiler_mode.h  expression_checker.cpp  expression_checker.h  local_resolver.cpp  local_resolver.h  options.cpp  options.h  source_file.cpp  source_file.h  type_checker.cpp  type_checker.h  type_resolver.cpp  type_resolver.h  visitor.cpp  visitor.h
src/entity/: constant.hpp  constant_entry.h  constant_table.cpp  constant_table.hpp  defined_function.cpp  defined_function.h  defined_variable.cpp  defined_variable.h  entity.cpp  entity.h  function.cpp  function.h  local_scope.cpp  local_scope.h  parameter.h  params.cpp  params.h  scope.h  top_level_scope.cpp  top_level_scope.h  undefined_function.h  undefined_variable.h  variable.h
src/exception/: compile_exception.hpp  file_exception.hpp  runtime_exception.hpp  semantic_exception.hpp  syntax_exception.hpp
src/main/: main.cpp
src/parser/: CMakeLists.txt  SesameLexer.g4  SesameParser.g4  build_ast.cpp  build_ast.h  error_verbose_listener.hpp  generate.sh  main.cpp  parser.cpp  parser.h
src/parser/parsing/: build_ast.cpp  build_ast.h  build_ast_visitor.cpp  build_ast_visitor.h  parser.cpp  parser.h
src/parser/runtime/: CMakeLists.txt
src/parser/runtime/src/atn/: RuleStopState.h  SetTransition.cpp  StarLoopEntryState.h  StarLoopbackState.h  Transition.cpp  Transition.h
src/parser/runtime/src/html/: ANTLRErrorListener_8h_source.html  ANTLRErrorStrategy_8h_source.html  ANTLRFileStream_8h_source.html  ANTLRInputStream_8h_source.html  ATNConfigSet_8h_source.html  ATNConfig_8h_source.html  ATNDeserializationOptions_8h_source.html  ATNDeserializer_8h_source.html  ATNSerializer_8h_source.html  ATNSimulator_8h_source.html  ATNState_8h_source.html  ATNType_8h_source.html  ATN_8h_source.html  AbstractParseTreeVisitor_8h_source.html  AbstractPredicateTransition_8h_source.html  ActionTransition_8h_source.html  AmbiguityInfo_8h_source.html  Any_8h_source.html  ArrayPredictionContext_8h_source.html  Arrays_8h_source.html  AtomTransition_8h_source.html  BailErrorStrategy_8h_source.html  BaseErrorListener_8h_source.html  BasicBlockStartState_8h_source.html  BasicState_8h_source.html  BitSet_8h_source.html  BlockEndState_8h_source.html  BlockStartState_8h_source.html  BufferedTokenStream_8h_source.html  CPPUtils_8h_source.html  CharStream_8h_source.html  Chunk_8h_source.html  CommonTokenFactory_8h_source.html  CommonTokenStream_8h_source.html  CommonToken_8h_source.html  ConsoleErrorListener_8h_source.html  ContextSensitivityInfo_8h_source.html  DFASerializer_8h_source.html  DFAState_8h_source.html  DFA_8h_source.html  (+908 more)
src/parser/runtime/src/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  (+33 more)
src/parser/runtime/src/latex/: annotated.tex  classGuid.tex  classGuidGenerator.tex  classXPathLexer.tex  classXPathLexer__coll__graph.md5  classXPathLexer__inherit__graph.md5  classantlr4_1_1ANTLRErrorListener.tex  classantlr4_1_1ANTLRErrorListener__inherit__graph.md5  classantlr4_1_1ANTLRErrorStrategy.tex  classantlr4_1_1ANTLRErrorStrategy__inherit__graph.md5  classantlr4_1_1ANTLRFileStream.tex  classantlr4_1_1ANTLRFileStream__coll__graph.md5  classantlr4_1_1ANTLRFileStream__inherit__graph.md5  classantlr4_1_1ANTLRInputStream.tex  classantlr4_1_1ANTLRInputStream__coll__graph.md5  classantlr4_1_1ANTLRInputStream__inherit__graph.md5  classantlr4_1_1BaseErrorListener.tex  classantlr4_1_1BaseErrorListener__coll__graph.md5  classantlr4_1_1BaseErrorListener__inherit__graph.md5  classantlr4_1_1BufferedTokenStream.tex  classantlr4_1_1BufferedTokenStream__coll__graph.md5  classantlr4_1_1BufferedTokenStream__inherit__graph.md5  classantlr4_1_1CancellationException.tex  classantlr4_1_1CancellationException__coll__graph.md5  classantlr4_1_1CancellationException__inherit__graph.md5  classantlr4_1_1CommonToken.tex  classantlr4_1_1CommonTokenFactory.tex  classantlr4_1_1CommonTokenFactory__coll__graph.md5  classantlr4_1_1CommonTokenFactory__inherit__graph.md5  classantlr4_1_1CommonTokenStream.tex  classantlr4_1_1CommonTokenStream__coll__graph.md5  classantlr4_1_1CommonTokenStream__inherit__graph.md5  classantlr4_1_1CommonToken__coll__graph.md5  classantlr4_1_1CommonToken__inherit__graph.md5  classantlr4_1_1ConsoleErrorListener.tex  classantlr4_1_1ConsoleErrorListener__coll__graph.md5  classantlr4_1_1ConsoleErrorListener__inherit__graph.md5  classantlr4_1_1DefaultErrorStrategy.tex  classantlr4_1_1DefaultErrorStrategy__coll__graph.md5  classantlr4_1_1DefaultErrorStrategy__inherit__graph.md5  (+302 more)
src/parser/runtime/src/support/: Any.h
src/syntax/: CMakeLists.txt  SesameParser.g4
src/syntax/runtime/: CMakeLists.txt
src/syntax/runtime/src/: plog.h
src/syntax/runtime/src/atn/: ATNDeserializer.cpp  ActionTransition.cpp  LexerATNSimulator.cpp  ParserATNSimulator.cpp  PlusBlockStartState.h  PredictionContext.cpp  PredictionContext.h  RuleTransition.cpp  SemanticContext.h
src/sysdep/: X86Linux.h  assembler_options.cpp  assembler_options.h  code_generator_options.cpp  code_generator_options.h  linker_options.cpp  linker_options.h  platform.h
src/type/: array_type.cpp  array_type.h  (+36 more)
test/: for-break1.cb  if3.cb
(+84 files in other folders)
